5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1692_1099.log
== TEST (2019-04-30 19:12:47) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:14:00) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:",",")
-- OUTPUT:
Entradas: ,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:14:55) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:",","a,","b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:",","a,","b,","c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:14:56) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:",","a,","b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:",","a,","b,","c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:15:24) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:"a,","b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:"a,","b,","c)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:15:25) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:"a,","b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:"a,","b,","c)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:16:03) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,"," b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:", a,"," b,","c)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:16:03) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,"," b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:", a,"," b,","c)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:16:04) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,"," b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:", a,"," b,","c)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:16:19) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,","c)
-- ERROR:
File "XXXX", line 4
    print("Entradas:", a,",", b,","c)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:16:25) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:57) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0 ):

-- ERROR:
File "XXXX", line 6
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:58) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0 ):

-- ERROR:
File "XXXX", line 6
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:18:02) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:18:03) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:18:04) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:18:04) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:04) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:22:03) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
	      print("Tipo de triangulo:escaleno ")	
		

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:19) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:20) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:20) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:24:14) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")
	else:
		prin("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:24:15) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")
	else:
		prin("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:24:21) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")
	else:
		print("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:24:22) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:invalido ")
	else:
		print("Tipo de triangulo:invalido ")

-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:25:13) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:25:14) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:25:46) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:25:47) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- EXECUTION TIME:
0.205496
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:25:48) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:25:48) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero ")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno ")	
		else:
			print("Tipo de triangulo:isosceles ")
	else:
		print("Tipo de triangulo:invalido ")
else:
	print("Tipo de triangulo:invalido ")
-- EXECUTION TIME:
0.163593
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:26:21) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno")	
		else:
			print("Tipo de triangulo:isosceles")
	else:
		print("Tipo de triangulo:invalido")
else:
	print("Tipo de triangulo:invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:26:21) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno")	
		else:
			print("Tipo de triangulo:isosceles")
	else:
		print("Tipo de triangulo:invalido")
else:
	print("Tipo de triangulo:invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:26:22) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo:equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo:escaleno")	
		else:
			print("Tipo de triangulo:isosceles")
	else:
		print("Tipo de triangulo:invalido")
else:
	print("Tipo de triangulo:invalido")
-- EXECUTION TIME:
0.217033
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:08) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:09) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.144127
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:35) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:36) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:36) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:37) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.158703
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:37) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.150173
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:37) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.126782
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:38) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.16879
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:28:29) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
	   elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 9
    elif(a!=b!=c):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:28:55) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:29:14) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.147056
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:29:45) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:29:46) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:29:47) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.20169
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:29:47) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.12893
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:29:48) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:29:48) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if (abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.155935
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
entrada a: entrada b: entrada c:Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:13) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:17) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.158727
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:21) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:21) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:32) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:32) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:32) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:33) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.150069
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:33) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.165069
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:34) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.251159
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1099/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:34) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.193283
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:34) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.182123
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1099/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:35) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.365232
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:35) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.259
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:35) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.458343
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:

-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:38:02) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:38:10) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.175749
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:38:15) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:38:56) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:40:11) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:41:24) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:41:24) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:41:24) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:41:25) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:41:25) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:43:04) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:43:11) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.169297
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: invalido
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:43:40) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c<0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:45:35) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c>0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:45:40) 
-- CODE:
a=float(input(" entrada a:"))
b=float(input(" entrada b:"))
c=float(input(" entrada c:"))
print("Entradas:", a,",", b,",",c)
if(a>0 and b>0 and c>0):
	if(abs(b-c)< a < b or abs(a-c)< b < a + c or abs(a-b) < c < a+b):
		if(a==b==c):
			print("Tipo de triangulo: equilatero")
		elif(a!=b!=c):
			print("Tipo de triangulo: escaleno")	
		else:
			print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.212881
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
